@@ -7,7 +7,7 @@ bill@newbreedsoftware.com
 http://www.tuxpaint.org/
 
 
-June 17, 2002 - October 6, 2006
+June 17, 2002 - October 11, 2006
 
 $Id$
 
@@ -263,6 +263,9 @@ $Id$
 
   * Malay
     Muhammad Najmi Ahmad Zabidi <mnajem@linuxmail.org>
+
+  * Ndebele
+    Vincent Mahlangu <vmahlangu@parliament.gov.za>
 
   * Norwegian Bokmal
     Knut Erik Hollund <khollund@responze.net>
