@@ -1,5 +1,5 @@
-.\" tuxpaint.1 - 2006.10.06
-.TH TUXPAINT 1 "6 Oct 2006" "0.9.16" "Tux Paint"
+.\" tuxpaint.1 - 2006.10.11
+.TH TUXPAINT 1 "11 Oct 2006" "0.9.16" "Tux Paint"
 .SH NAME
 tuxpaint -- A drawing program for young children.
 
@@ -410,6 +410,9 @@ malay
 mexican-spanish | espanol-mejicano | mexican
 .TP 2
 -
+ndebele
+.TP 2
+-
 norwegian | nynorsk
 .TP 2
 -
@@ -644,6 +647,7 @@ Arkadiusz Lipiec,
 Ricky Lontoc,
 Dag H. Loras,
 Burkhard Luck,
+Vincent Mahlangu,
 Ankit Malik,
 Fred Ulisses Maranhao,
 Martin,
