@@ -9,7 +9,7 @@ http://www.newbreedsoftware.com/tuxpaint/
 $Id$
 
 
-2006.October.10 (0.9.16)
+2006.October.11 (0.9.16)
 
   * Interface improvements:
     -----------------------
@@ -129,6 +129,9 @@ $Id$
 
     * Gujarati
       Kartik Mistry <kartik.mistry@gmail.com>
+
+    * Ndebele
+      Vincent Mahlangu <vmahlangu@parliament.gov.za>
 
     * Scottish Gaelic
       Niall Tracey <internationiall@hotmail.com>
